@@ -29,7 +29,7 @@
 MainWidget::MainWidget(QWidget *parent)
   : QMainWindow(parent)
 {
-  admin_config=new Config();
+  admin_config=new Config(this);
   admin_config->load();
 
   setMinimumSize(sizeHint());
